<resources>
    <string name="app_name">Zoopedia</string>
    <string name="welcome_to_zoopedia">Welcome to Zoopedia</string>
    <string name="developer_email">ranggasaputra200412@gmail.com</string>
    <string name="developer_name">Rangga Saputra</string>
    <string name="animal_image_view">Animal Image View</string>
    <string-array name="animal_name">
        <item>Ikan Hiu</item>
        <item>Panda</item>
        <item>Koala</item>
        <item>Komodo</item>
        <item>Burung Kolibri</item>
        <item>Serigala</item>
        <item>Panda Merah</item>
        <item>Belalang Sentadu</item>
        <item>Ikan Giru</item>
        <item>Elang Bondol</item>
    </string-array>
    <string-array name="animal_scientific_name">
        <item>Carcharodon carcharias</item>
        <item>Ailuropoda melanoleuca</item>
        <item>Phascolarctos cinereus</item>
        <item>Varanus komodoensis</item>
        <item>Trochilidae</item>
        <item>Canis lupus</item>
        <item>Ailurus fulgens</item>
        <item>Mantodea</item>
        <item>Amphiprioninae</item>
        <item>Haliastur indus</item>
    </string-array>
    <string-array name="animal_description">
        <item>Hiu adalah salah satu predator puncak rantai makanan di lautan. Walaupun di film - film ikan hiu digambarkan sangat menakutkan dan akan selalu memangsa manusia, akan tetapi manusia bukanlah makanan favorit dari hiu melainkan ikan - ikan yang lebih kecil dari dia. Walaupun banyak sekali spesies hiu yang ada sekarang akan tetapi hiu putih termasuk hewan yang rentan, yang artinya spesies ini bisa saja menjadi terancam punah jika tidak ada penanganan keselamatan dan reproduksi spesies ini. </item>
        <item>Panda adalah salah satu hewan yang sangat disukai oleh banyak orang. Selain badannya yang besar dan tingkahnya yang menggemaskan ternyata panda memiliki 6 jari di tumit kaki depan mereka loh. Walaupun panda tergolong sebagai hewan herbivora, akan tetapi panda memiliki gigi dan pencernaan hewan karnivora. Panda juga termasuk ke daftar hewan yang rentan, yang artinya panda bisa saja menjadi terancam punah jika tidak ada penanganan keselamatan dan reproduksi spesies ini </item>
        <item>Koala adalah hewan yang sangat iconic di negara Australia. Salah satu hewan favorit banyak orang ini memiliki fakta unik yaitu hewan yang sangat jarang minum air. Mengapa koala sangat jarang minum air dikarenakan makanannya yaitu daun eukaliptus sudah mengandung cukup air sehingga koala tidak perlu turun dari pohon untuk minum air. Koala juga termasuk dengan spesies rentan, yang artinya hewan ini bisa saja terancam punah jika tidak ada penanganan keselamatan dan reproduksi spesies. </item>
        <item>Komodo adalah salah satu hewan purba yang berasal dari Indonesia. Kenapa disebut hewan purba, dikarenakan nenek moyang komodo sudah ada sejak 30 juta tahun yang lalu. Komodo sendiri tinggal di pulau komodo yang berada di provinsi nusa tenggara timur. Salah satu yang unik dari komodo adalah gigitannya yang mengandung banyak bakteri berbahaya. Dikarenakan jumlah komodo yang sedikit, sekarang komodo ditetapkan sebagai hewan yang terancam punah dan tujuan taman nasional komodo didirikan adalah untuk menjaga dan melindungi komodo </item>
        <item>Burung Kolibri adalah burung mungil dan cantik pemakan nektar. Walaupun tubuhnya kecil tapi kepakan sayapnya sangat cepat yaitu 12 - 80 kepakan per detik, karena kepakan yang cepat itu ketika kita berada di dekat burung kolibri kita bisa mendengar suara dengungan. Bisa dibilang burung kolibri memiliki peran yang mirip dengan lebah, yaitu mengantar serbuk sari ke bunga lainnya. Uniknya burung kolibri betina berukuran lebih besar dari burung kolibri jantan </item>
        <item>Serigala adalah salah satu hewan yang berkerabat dekat dengan hewan peliharaan kita yaitu anjing. Berbeda dengan anjing serigala hidup di alam liar secara berkelompok untuk berburu hewan hewan seperti rusa, babi hutan dan kerbau. Serigala termasuk hewan yang memiliki rasa kepemimpinan dimana serigala alpha atau bisa kita sebut serigala yang terkuat dikawanannya akan memimpin dan melindungi kawanannya, oleh sebab itu tak jarang kita bisa melihat beberapa kelompok seperti tentara menggunakan gambar serigala sebagai simbol kepemimpinan dan kekeluargaan.</item>
        <item>Panda Merah adalah salah satu hewan menggemaskan yang ukurannya tidak sebesar dengan panda raksasa yang hitam putih itu loh. Memang sebelumnya Panda Merah ditempatkan dalam suku keluarga beruang ursidae karena memiliki kesamaan dengan Panda, akan tetapi sekarang Panda Merah dimasukkan kedalam suku tunggal Ailuridae. Walaupun Panda Merah memiliki sistem pencernaan hewan karnivora, Panda Merah memiliki kebiasaan seperti hewan herbivora. Makanan utamanya adalah bambu, beri, akar akaran, aneka tumbuhan dan untuk menambah gizi panda merah juga memakan telur, serangga dan hewan kecil lainnya loh.</item>
        <item>Belalang sentadu atau sering kita kenal dengan sebutan Belalang Sembah adalah salah satu serangga yang memiliki nama sebutan yang unik yaitu praying mantis. Mengapa dia disebut praying mantis dikarenakan sikapnya yang terlihat seperti sedang berdoa. Belalang sembah termasuk serangga yang kanibal karena saat musim kawin, belalang sembah betina akan memakan belalang sembah pejantan selama proses perkawinan. Belalang Sembah termasuk serangga yang ganas dan kuat dikarenakan Belalang Sembah bisa saja memangsa kadal yang pada dasarnya kadal memiliki tubuh yang lebih besar dari Belalang Sembah itu sendiri.</item>
        <item>Ikan Giru atau yang sering kita kenal dengan ikan badut adalah jenis ikan yang banyak digemari dikarenakan penayangan film yang berjudul finding nemo. Ikan Giru bersimbiosis mutualisme dengan anemon laut, anemon laut akan melindungi ikan giru dari pemangsa dan Ikan Giru akan membersihkan anemon dengan memakan sisa sisa makanan anemon laut. Dikarenakan warnanya yang indah dan menarik banyak penggemar ikan menangkap ikan ini dan dijadikan peliharaan di akuarium mereka.</item>
        <item>Elang Bondol adalah spesies burung pemangsa dari famili Accipitridae. Elang Bondol tersebar dibanyak negara seperti India, China selatan, Asia tenggara, Indonesia, Australia. Elang Bondol bisa terbang melayang setinggi 20 - 50 meter diatas permukaan. Habitat favorit dari Elang Bondol itu sendiri adalah area tepi laut yang berlumpur seperti hutan mangrove, muara sungai, dan pesisir pantai. Walaupun Elang Bondol termasuk kedalam kelompok Burung Pemangsa tak jarang kita dapat menemukan Elang Bondol sedang memakan bangkai hewan lain. </item>
    </string-array>
    <string name="animal_favorite_foods">Animal Favorite Foods</string>
    <string name="food_image_1">Food Image 1</string>
    <string name="food_1">Food 1</string>
    <string name="food_image_2">Food Image 2</string>
    <string name="food_2">Food 2</string>
    <string name="food_image_3">Food Image 3</string>
    <string name="food_3">Food 3</string>
    <string name="fun_fact_about_animal">Fun Fact About Animal</string>
    <string name="animal_fun_facts">Animal Fun Facts</string>
    <string name="share_to_your_friends">Share To Your Friends</string>
    <string name="source_for_details_information">Source Information</string>
    <string-array name="animal_food_1">
        <item>Ikan Kecil</item>
        <item>Bambu</item>
        <item>Daun Pohon Eukaliptus</item>
        <item>Bangkai Hewan</item>
        <item>Nektar Bunga</item>
        <item>Rusa</item>
        <item>Bambu</item>
        <item>Jangkrik</item>
        <item>Sisa Makanan Anemon</item>
        <item>Ikan</item>
    </string-array>
    <string-array name="animal_food_2">
        <item>Gurita</item>
        <item>Bambu</item>
        <item>Daun Pohon Eukaliptus</item>
        <item>Kambing</item>
        <item>Serangga Kecil</item>
        <item>Babi Hutan</item>
        <item>Beri</item>
        <item>Kupu - Kupu</item>
        <item>Sisa Makanan Anemon</item>
        <item>Katak</item>
    </string-array>
    <string-array name="animal_food_3">
        <item>Penyu Laut</item>
        <item>Bambu</item>
        <item>Daun Pohon Eukaliptus</item>
        <item>Babi Hutan</item>
        <item>Telur Serangga</item>
        <item>Kerbau</item>
        <item>Akar - akaran</item>
        <item>Lebah</item>
        <item>Sisa Makanan Anemon</item>
        <item>Hewan Pengerat</item>
    </string-array>
    <string-array name="animal_fun_fact">
        <item>- Hidup di air asin\n- Hewan Karnivora\n- Umur Hiu bisa mencapai 70 tahun\n- Panjang hiu bisa sampai 6 meter\n- Berat Hiu bisa sampai 3,18 ton</item>
        <item>- Hewan Herbivora\n- Hidup di daratan\n- Umur Panda bisa mencapai lebih dari 20 tahun\n- Berat Panda bisa sampai 117,5 kg\n- Panda memiliki tinggi dari 60 - 90 cm</item>
        <item>- Salah satu hewan herbivora\n- Hidup di pohon eukaliptus\n- Panjang tubuh koala mencapai 60 - 85 cm\n- Berat tubuh koala 4 - 15 kg\n- Benar benar menyukai daun eukaliptus</item>
        <item>- Salah satu hewan karnivora\n- Hidup di daratan pulau komodo\n- Panjang tubuh Komodo bisa mencapai 2 - 3 Meter\n- Berat Komodo bisa mencapai 100 kg</item>
        <item>- Salah satu jenis burung terkecil di dunia\n- Termasuk Hewan Omnivora\n- Panjang burung kolibri bisa mencapai 6,4 cm\n- Sebagian besar spesies Burung Kolibri terletak di Amerika Utara dan Amerika Selatan</item>
        <item>- Salah satu hewan karnivora\n- Tinggi serigala bisa mencapai 60 - 80 cm, \n- Berat serigala bisa memiliki berat 23 - 59 kg\n- Menggunakan lolongan sebagai salah satu cara berkomunikasi</item>
        <item>- Salah satu hewan omnivora\n- Termasuk hewan yang vulnerable/rentan terancam punah\n- Panda Merah memiliki panjang 58 cm\n- Panda Merah bisa memiliki berat badan 3,7 - 6,2 kg untuk pejantan dan 3 - 6 kg untuk betina </item>
        <item>- Salah satu serangga karnivora\n- Belalang Sembah bisa memiliki panjang tubuh 17 cm\n- Beberapa spesies memiliki kemampuan untuk berkamuflase\n- Ada 2300 jenis spesies diseluruh dunia</item>
        <item>- Hidup di air asin\n- Ikan Giru bisa memiliki panjang tubuh hingga 18 cm\n- Terdapat 28 spesies yang tersebar di lautan Pasifik, Laut Merah, Lautan India dan Karang Besar di Australia</item>
        <item>- Salah satu hewan karnivora\n- Elang Bondol memiliki panjang tubuh 43 - 51 cm.\n- Resiko Elang Bondol terancam punah termasuk rendah\n- Elang Bondol memiliki kebiasaan memakan buruannya saat terbang</item>
    </string-array>
    <string-array name="animal_information_source">
        <item>https://id.wikipedia.org/wiki/Hiu_putih</item>
        <item>https://travel.detik.com/travel-news/d-5682107/panjang-umur-panda-raksasa-tertua-rayakan-ulang-tahun-ke-35</item>
        <item>https://en.wikipedia.org/wiki/Koala</item>
        <item>https://id.wikipedia.org/wiki/Komodo#:~:text=Komodo%20atau%20lengkapnya%20biawak%20komodo,disebut%20dengan%20nama%20setempat%20ora</item>
        <item>https://id.wikipedia.org/wiki/Kolibri</item>
        <item>https://id.wikipedia.org/wiki/Serigala_abu-abu</item>
        <item>https://id.wikipedia.org/wiki/Panda_merah</item>
        <item>https://protan.faperta.unej.ac.id/belalang-sembah-sahabat-ku-dalam-biodiversitas-serangga/</item>
        <item>https://id.wikipedia.org/wiki/Ikan_giru</item>
        <item>https://id.wikipedia.org/wiki/Elang_bondol</item>
    </string-array>
</resources>