<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailAnimalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/animal_image_view"
            android:id="@+id/iv_detail_animal_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/panda"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_detail_animal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/iv_detail_animal_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/tv_detail_animal_scientific"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_animal_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/animal_scientific_name"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/tv_detail_animal_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_animal_scientific"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/animal_description"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_favorite_foods"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_animal_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"/>

        <GridLayout
            android:id="@+id/gl_animals_foods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:columnCount="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="3dp"
                app:cardCornerRadius="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_detail_food_photo_1"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/food_image_1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:src="@drawable/carnivore_food"/>

                    <TextView
                        android:id="@+id/tv_detail_food_name_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food_1"
                        android:textSize="14sp"
                        android:layout_gravity="bottom|center_horizontal"
                        app:layout_constraintTop_toBottomOf="@id/iv_detail_food_photo_1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textAlignment="center"
                        android:padding="8dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="3dp"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_detail_food_photo_2"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/food_image_2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:src="@drawable/carnivore_food"/>

                    <TextView
                        android:id="@+id/tv_detail_food_name_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food_2"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/iv_detail_food_photo_2"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textAlignment="center"
                        android:padding="8dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="3dp"
                app:cardCornerRadius="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_detail_food_photo_3"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/food_image_3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:src="@drawable/carnivore_food"/>

                    <TextView
                        android:id="@+id/tv_detail_food_name_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food_3"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@id/iv_detail_food_photo_3"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textAlignment="center"
                        android:padding="8dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <TextView
            android:id="@+id/tv_animal_funfact_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gl_animals_foods"
            android:text="@string/fun_fact_about_animal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_animal_funfact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/animal_fun_facts"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_animal_funfact_title" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/share_to_your_friends"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_animal_funfact" />

        <Button
            android:id="@+id/btn_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/action_share"
            android:text="@string/source_for_details_information"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>